add bcrypts for user password

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://koblandikz:Koba050105.@cluster1.j0gkf.mongodb.net/travel_app
 GOOGLE_API_KEY=AIzaSyAh7qyCXY6ylXSSOdQFV7Xd-lBOGfSjm74
+PORT=3000
